--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@ p{
     #jk{
         font-size: 25px;
     }
+    div{
+        height:200px;
+        width:200px;
+        background-color: green;
+        padding: 10px;
+        border:10px solid black;
+        margin:50px;
+    }
